charts/workflows/test-policy/inject-envoy-sidecar/pod-mutated.yaml
apiVersion: v1
kind: Pod
metadata:
  name: envoy-auth-test
  labels:
    workflows.argoproj.io/workflow: envoy-auth-test
  annotations:
    workflows.diamond.ac.uk/authenticated: "true"

spec:
  initContainers:
    - name: "workflows-auth-init"
    - name: "workflows-auth-envoy-validate"
    - name: "workflows-auth-envoy"

  containers:
    - name: main
      env:
        - name: GRAPH_URL
          value: "http://127.0.0.1:6000/graphql"
        - name: GRAPH_URL_WS
          value: "http://127.0.0.1:6000/graphql/ws"
