charts/workflows/test-policy/inject-envoy-sidecar/pod-succeeded.yaml
apiVersion: v1
kind: Pod
metadata:
  name: envoy-auth-test
status:
  phase: Succeeded
